--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Inserir nova imagem</h2>
     <input type="url" required placeholder="URL da imagem">
     <button type="submit">Adicionar</button>
-    <button class="botao-cancelar" type="reset">Cancelar</button>
+    <button id="botao-cancelar" type="reset">Cancelar</button>
   </form>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
