add new function delete all

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       />
       <button type="submit">Adicionar</button>
       <button id="botao-cancelar" type="reset">Cancelar</button>
+      <button id="botao-apagar" type="reset">Apagar tudo</button>
     </form>
-
+  
     <ul>
       <li>
         <img src="imgs/foto1.jpg" alt="Pintura de um gato" />
