--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         required
         placeholder="URL da imagem"
       />
-      <button type="submit">Adicionar</button>
+      <button type="submit">Adicionar +</button>
       <button id="botao-cancelar" type="reset">Cancelar</button>
       <button id="botao-apagar" type="reset">Apagar tudo</button>
     </form>
