--- a/index.html
+++ b/index.html
@@ -26,22 +26,25 @@
         required
         placeholder="URL da imagem"
       />
-      <button type="submit">Adicionar +</button>
-      <button id="botao-cancelar" type="reset">Cancelar</button>
-      <button id="botao-apagar" type="reset">Apagar tudo</button>
+      <div class="botoes-principais">
+        <button type="submit">Adicionar +</button>
+        <button id="botao-cancelar" type="reset">Cancelar</button>
+        <button id="botao-apagar" type="reset">Apagar tudo</button>
+      </div>
     </form>
   
     <ul>
-      <li>
-        <img src="imgs/foto1.jpg" alt="Pintura de um gato" />
-    </li>
-      
     <li>
-      <img src="imgs/foto2.jpg" alt="Pintura de um ganso" />
+      <img src="imgs/foto1.jpg" alt="Flor" />
     </li>
-      
     <li>
-        <img src="imgs/foto3.jpg" alt="Pintura de 2 cachorros" />
+        <img src="imgs/foto2.jpg" alt="Ganso" />
+    </li>
+    <li>
+        <img src="imgs/foto3.jpg" alt="Dois cachorros" />
+    </li>
+    <li>
+        <img src="imgs/foto4.jpg" alt="Flor na chuva" />
     </li>
     </ul>
 
